src/cs221/GP01/main/resource/css/Game.css
/*
   * @(#) Game.css 1.1 2018/02/16
   *
   * Copyright (c) 2018 University of Wales, Aberystwyth.
   * All rights reserved.
   *
   */

/* Game Screen CSS */

/* Digital Clock font*/
@font-face{
    font-family: 'DS-Digital';
    /*src: url("/cs221/GP01/main/resource/font/DS-DIGI.TTF");*/
}

.mainContainer{
    -fx-spacing: 50px;
    -fx-alignment: top-center;
}

.topMenu{
    -fx-background-color: -fx-secondary-color;
    -fx-pref-width: 600px;
    -fx-pref-height: 70px;
    -fx-alignment: center;
    -fx-spacing: 180px;
}


.topMenu .timerLabel{
    -fx-font-size: 48px;
    -fx-text-fill: white;
    -fx-font-family: DS-Digital;
}

.topMenu .scoreLabel{
    -fx-font-size: 48px;
    -fx-text-fill: white;
    -fx-font-family: DS-Digital;
    -fx-pref-width: 70px;
    -fx-text-alignment: left;
}

.topMenu .buttonContainer{
    -fx-spacing: 10px;
    -fx-alignment: center;
}


.topMenu .buttonContainer .button{
    -fx-background-color: -fx-tertiary-color;
    -fx-pref-height: 32;
    -fx-pref-width: 32;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
    -fx-background-size: 20 20;
}

.hamburgerContext{
    -fx-pref-width: 150px;
}

.hamburgerContext .contextMenuItem{
    -fx-background-size: 16 16;
    -fx-background-repeat: no-repeat;
    -fx-background-position: 125;
}

.hamburgerContext #settingsBtn{
    -fx-background-image: url("../img/icon/settings_icon_context.png");
}

.hamburgerContext #helpBtn{
    -fx-background-image: url("../img/icon/help_icon_context.png");
}

.hamburgerContext #quitBtn{
    -fx-background-image: url("../img/icon/quit_icon_context.png");
}

#menuButton{
    -fx-background-image: url("../img/icon/hamburger_icon_inactive.png");
}

#menuButton:hover{
    -fx-background-image: url("../img/icon/hamburger_icon.png");
}


.gameElementsContainer{
    -fx-spacing: 10px;
    -fx-alignment: center;
}

.gameElementsContainer .tab-pane .tab-header-area .tab-header-background{
    -fx-background-color: transparent;
}

.gameElementsContainer .tab-pane .tab{
    -fx-background-color: -fx-tertiary-color;
    -fx-alignment: center;
}

.gameElementsContainer .tab-pane .tab Label{
    -fx-text-fill: white;
    -fx-font-weight: bold;
}

.gameElementsContainer .tab-pane .tab:selected{
    -fx-background-color: white;
}

.gameElementsContainer .tab-pane .tab:selected Label{
    -fx-text-fill: -fx-tertiary-color;
}

.gameElementsContainer .tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
    -fx-border-color: transparent;
}

.gameElementsContainer .tab-pane:top *.tab-header-area {
    -fx-background-insets: 0, 0 0 1 0;
    /* -fx-padding: 0.416667em 0.166667em 0.0em 0.833em; /* 5 2 0 10 */
    -fx-padding: 0.416667em 0.166667em 0.0em 0.0em; /* overridden as 5 2 0 0 */
}

.gameElementsContainer .cubeContainer{
    -fx-pref-width: 360px;
}


.gameElementsContainer .cubeContainer .gridTab{
    -fx-background-color: white;
}

.gameElementsContainer .cubeContainer .gridTab .explodeIconContainer{
    -fx-alignment: bottom-right;
    -fx-padding: 12px;
}

.gameElementsContainer .cubeContainer .gridTab .explodeIconContainer Button{
    -fx-background-size: 36 36;
    -fx-background-repeat: no-repeat;
    -fx-pref-height: 36px;
    -fx-pref-width: 36px;
    -fx-background-color: transparent;
    -fx-background-position: center;
    -fx-background-image: url("../img/icon/explode_icon.png");
    -fx-cursor: hand;
}

.gameElementsContainer .cubeContainer .gridTab .explodeIconContainer .explode{
    -fx-background-image: url("../img/icon/explode_icon.png");
}

.gameElementsContainer .cubeContainer .gridTab .explodeIconContainer .implode{
    -fx-background-image: url("../img/icon/implode_icon.png");
}

.foundWordsContainer{
    -fx-pref-width: 200px;
    -fx-pref-height: 320px;
    -fx-spacing: 10;
    -fx-alignment: center;
}

.foundWordsContainer .label{
    -fx-text-fill: white;
    -fx-font-size: 18px;
}


.wordInputContainer{
    -fx-pref-width: 300px;
    -fx-spacing: 30px;
    -fx-alignment: center;
    -fx-padding: 0 0 20 0;
}

.wordInputContainer .wordInputTextContainer{
    -fx-alignment: center;
}

.wordInputContainer .wordInputTextContainer .button{
    -fx-pref-height: 20px;
    -fx-pref-width: 20px;
    -fx-background-color: transparent;
    -fx-background-repeat: no-repeat;
    -fx-background-position: center;
    -fx-background-size: 20 20;
    -fx-background-image: url("../img/icon/close_icon_inactive.png");
}

.wordInputContainer .wordInputTextContainer .button:hover{
    -fx-background-image: url("../img/icon/close_icon_alt.png");
}

.wordInputContainer #textField{
    -fx-pref-height: 35px;
    -fx-pref-width: 300px;
    -fx-font-size: 14px;
    -fx-font-weight: bold;
    -fx-text-fill: -fx-tertiary-color;

}

.wordInputContainer .wordInputButtonContainer{
    -fx-alignment: center;
    -fx-spacing: 20px;
}

.wordInputContainer .wordInputButtonContainer .button{
    -fx-background-color: -fx-tertiary-color;
    -fx-text-fill: #cecece;
    -fx-font-size: 14px;
    -fx-font-weight: bolder;
    -fx-pref-width: 150px;
}

.wordInputContainer .wordInputButtonContainer .button:hover{
    -fx-text-fill: white;
}


/*2d grid CSS */

GridPane {
    -fx-spacing:10;
}

GridPane Label {
    -fx-background-color: -fx-tertiary-color, white ;
    -fx-background-insets: 0, 1 ;
    -fx-pref-height:29;
    -fx-pref-width:29;
    -fx-alignment: center;
    -fx-text-alignment: center;
    -fx-text-fill: white;
    -fx-font-weight: bold;
}

/* 2.5D Grid CSS */

Box {
    -fx-rotate:-40;
    -fx-pref-height:20px;
    -fx-pref-width:20px;
    -fx-pref-depth:20px;
}

